@@ -10,31 +10,22 @@ import es.caib.comanda.salut.logic.service.SalutSchedulerService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.core.task.TaskExecutor;
-import org.springframework.scheduling.TaskScheduler;
-import org.springframework.scheduling.support.PeriodicTrigger;
+import org.springframework.core.task.TaskRejectedException;
 import org.springframework.test.util.ReflectionTestUtils;
 
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.concurrent.ScheduledFuture;
+import java.util.concurrent.atomic.AtomicInteger;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class SalutSchedulerServiceTest {
-
-    @Mock
-    private TaskScheduler taskScheduler;
 
     @Mock
     private SalutClientHelper salutClientHelper;
@@ -46,38 +37,26 @@ public class SalutSchedulerServiceTest {
     private ParametresHelper parametresHelper;
 
     @Mock
-    private ScheduledFuture<?> scheduledFuture;
-
-    @Mock
     private TaskExecutor salutWorkerExecutor;
-
-    @Captor
-    private ArgumentCaptor<Runnable> runnableCaptor;
-
-    @Captor
-    private ArgumentCaptor<PeriodicTrigger> triggerCaptor;
 
     private SalutSchedulerService salutSchedulerService;
     private EntornApp entornApp;
     private EntornApp inactiveEntornApp;
+    private EntornApp entornApp2;
 
     @BeforeEach
     void setUp() {
         // Create SalutSchedulerService instance
         salutSchedulerService = new SalutSchedulerService(
-                taskScheduler,
                 salutClientHelper,
                 salutInfoHelper,
                 parametresHelper,
                 salutWorkerExecutor
         );
 
-        // Set schedulerLeader to true for testing
+        // Set leader flags to true by default; tests may override
         ReflectionTestUtils.setField(salutSchedulerService, "schedulerLeader", true);
         ReflectionTestUtils.setField(salutSchedulerService, "schedulerBack", true);
-
-		// Set schedulerBack to true for testing
-		ReflectionTestUtils.setField(salutSchedulerService, "schedulerBack", true);
 
         // Setup EntornApp
         entornApp = EntornApp.builder()
@@ -85,6 +64,14 @@ public class SalutSchedulerServiceTest {
                 .app(new AppRef(1L, "Test App"))
                 .entorn(new EntornRef(1L, "Test Entorn"))
                 .salutUrl("http://test.com/health")
+                .activa(true)
+                .build();
+
+        entornApp2 = EntornApp.builder()
+                .id(3L)
+                .app(new AppRef(2L, "Test App 2"))
+                .entorn(new EntornRef(2L, "Test Entorn 2"))
+                .salutUrl("http://test2.com/health")
                 .activa(true)
                 .build();
 
@@ -98,90 +85,39 @@ public class SalutSchedulerServiceTest {
 
     }
 
-//    @Test
-//    void testInicialitzarTasques() {
-//        // Arrange
-//        List<EntornApp> entornApps = Arrays.asList(entornApp);
-//        when(salutClientHelper.entornAppFindByActivaTrue()).thenReturn(entornApps);
-//        // Mock taskScheduler.schedule to return scheduledFuture
-//        doReturn(scheduledFuture).when(taskScheduler).schedule(any(Runnable.class), any(PeriodicTrigger.class));
-//
-//        // Act
-//        salutSchedulerService.inicialitzarTasques();
-//
-//        // Assert
-//        verify(salutClientHelper).entornAppFindByActivaTrue();
-//        verify(taskScheduler).schedule(any(Runnable.class), any(PeriodicTrigger.class));
-//    }
-
     @Test
-    void testProgramarTasca_ActiveEntornApp() {
-        Map<Long, ScheduledFuture<?>> tasquesActives = new HashMap<>();
-        ReflectionTestUtils.setField(salutSchedulerService, "tasquesActives", tasquesActives);
+    void scheduledSalutTasks_doesNotRun_whenNotLeader() {
+        // Arrange: make instance not leader
+        ReflectionTestUtils.setField(salutSchedulerService, "schedulerLeader", false);
 
         // Act
-        salutSchedulerService.programarTasca(entornApp);
-        // Mock taskScheduler.schedule to return scheduledFuture
-//        doReturn(scheduledFuture).when(taskScheduler).schedule(any(Runnable.class), any(PeriodicTrigger.class));
+        salutSchedulerService.scheduledSalutTasks();
 
-        // Assert
-        verify(taskScheduler).schedule(runnableCaptor.capture(), triggerCaptor.capture());
-
-        PeriodicTrigger trigger = triggerCaptor.getValue();
-//        assertEquals(15 * 60 * 1000, trigger.getPeriod());
-
-        // Verify the task is stored in tasquesActives
-//        Map<Long, ScheduledFuture<?>> tasquesActives = (Map<Long, ScheduledFuture<?>>) ReflectionTestUtils.getField(salutSchedulerService, "tasquesActives");
-        assertNotNull(tasquesActives);
-        assertTrue(tasquesActives.containsKey(1L));
+        // Assert: no calls to fetch entorn apps, no tasks executed
+        verify(salutClientHelper, never()).entornAppFindByActivaTrue();
+        verifyNoInteractions(salutInfoHelper);
+        verifyNoInteractions(salutWorkerExecutor);
     }
 
     @Test
-    void testProgramarTasca_InactiveEntornApp() {
-        // Act
-        salutSchedulerService.programarTasca(inactiveEntornApp);
-
-        // Assert
-        verify(taskScheduler, never()).schedule(any(Runnable.class), any(PeriodicTrigger.class));
-
-        // Verify the task is not stored in tasquesActives
-        Map<Long, ScheduledFuture<?>> tasquesActives = (Map<Long, ScheduledFuture<?>>) ReflectionTestUtils.getField(salutSchedulerService, "tasquesActives");
-        assertNotNull(tasquesActives);
-        assertFalse(tasquesActives.containsKey(2L));
-    }
-
-    @Test
-    void testCancelarTascaExistent_TaskExists() {
+    void scheduledSalutTasks_noActiveEntornApps_doesNothing() {
         // Arrange
-        Map<Long, ScheduledFuture<?>> tasquesActives = (Map<Long, ScheduledFuture<?>>) ReflectionTestUtils.getField(salutSchedulerService, "tasquesActives");
-        tasquesActives.put(1L, scheduledFuture);
+        when(salutClientHelper.entornAppFindByActivaTrue()).thenReturn(List.of());
 
         // Act
-        salutSchedulerService.cancelarTascaExistent(1L);
+        salutSchedulerService.scheduledSalutTasks();
 
         // Assert
-        verify(scheduledFuture).cancel(eq(false));
-        assertFalse(tasquesActives.containsKey(1L));
+        verify(salutClientHelper).entornAppFindByActivaTrue();
+        verifyNoInteractions(salutInfoHelper);
+        verifyNoInteractions(salutWorkerExecutor);
     }
 
     @Test
-    void testCancelarTascaExistent_TaskDoesNotExist() {
-        // Act
-        salutSchedulerService.cancelarTascaExistent(1L);
-
-        // Assert
-        verify(scheduledFuture, never()).cancel(anyBoolean());
-    }
-
-    @Test
-    void testExecutarProces() {
+    void scheduledSalutTasks_executesForEachActiveEntornApp() {
         // Arrange
-        Map<Long, ScheduledFuture<?>> tasquesActives = mock(Map.class);
-        ReflectionTestUtils.setField(salutSchedulerService, "tasquesActives", tasquesActives);
-        // First schedule a task to capture the Runnable
-        salutSchedulerService.programarTasca(entornApp);
-        verify(taskScheduler).schedule(runnableCaptor.capture(), any(PeriodicTrigger.class));
-        // Make the worker executor run the submitted runnable synchronously
+        when(salutClientHelper.entornAppFindByActivaTrue()).thenReturn(List.of(entornApp, entornApp2));
+        // execute worker runnable inline
         doAnswer(invocation -> {
             Runnable r = invocation.getArgument(0);
             r.run();
@@ -189,71 +125,56 @@ public class SalutSchedulerServiceTest {
         }).when(salutWorkerExecutor).execute(any(Runnable.class));
 
         // Act
-        // Execute the captured Runnable (which will dispatch to the worker executor)
-        runnableCaptor.getValue().run();
+        salutSchedulerService.scheduledSalutTasks();
 
-        // Assert: the worker has executed and the helper has been called
+        // Assert
         verify(salutInfoHelper).getSalutInfo(eq(entornApp));
+        verify(salutInfoHelper).getSalutInfo(eq(entornApp2));
+        verify(salutInfoHelper, times(2)).getSalutInfo(any(EntornApp.class));
     }
 
     @Test
-    void testExecutarProces_Exception() {
+    void scheduledSalutTasks_continuesIfOneEntornAppThrows() {
         // Arrange
-        Map<Long, ScheduledFuture<?>> tasquesActives = mock(Map.class);
-        ReflectionTestUtils.setField(salutSchedulerService, "tasquesActives", tasquesActives);
-        // First schedule a task to capture the Runnable
-        salutSchedulerService.programarTasca(entornApp);
-        verify(taskScheduler).schedule(runnableCaptor.capture(), any(PeriodicTrigger.class));
-
-        // Make the worker executor run the submitted runnable synchronously
+        when(salutClientHelper.entornAppFindByActivaTrue()).thenReturn(List.of(entornApp, entornApp2));
         doAnswer(invocation -> {
             Runnable r = invocation.getArgument(0);
             r.run();
             return null;
         }).when(salutWorkerExecutor).execute(any(Runnable.class));
 
-        // Mock salutInfoHelper to throw exception
-        doThrow(new RuntimeException("Test exception")).when(salutInfoHelper).getSalutInfo(any(EntornApp.class));
+        // Throw for the first, succeed for the second
+        doThrow(new RuntimeException("boom")).when(salutInfoHelper).getSalutInfo(eq(entornApp));
+        // entornApp2 default: no exception
 
-        // Act & Assert - should not throw exception (worker catches exceptions)
-        assertDoesNotThrow(() -> runnableCaptor.getValue().run());
+        // Act & Assert: method should not throw even if one runnable fails internally
+        assertDoesNotThrow(() -> salutSchedulerService.scheduledSalutTasks());
+
+        // Verify both were attempted
         verify(salutInfoHelper).getSalutInfo(eq(entornApp));
+        verify(salutInfoHelper).getSalutInfo(eq(entornApp2));
     }
 
     @Test
-    void testComprovarRefrescInfo() {
+    void scheduledSalutTasks_continuesIfTaskRejectedForOne() {
         // Arrange
-        List<EntornApp> entornApps = Arrays.asList(entornApp);
-        when(salutClientHelper.entornAppFindByActivaTrue()).thenReturn(entornApps);
-        // Mock taskScheduler.schedule to return scheduledFuture
-        doReturn(scheduledFuture).when(taskScheduler).schedule(any(Runnable.class), any(PeriodicTrigger.class));
+        when(salutClientHelper.entornAppFindByActivaTrue()).thenReturn(List.of(entornApp, entornApp2));
+
+        AtomicInteger call = new AtomicInteger();
+        doAnswer(invocation -> {
+            if (call.getAndIncrement() == 0) {
+                throw new TaskRejectedException("queue full");
+            }
+            Runnable r = invocation.getArgument(0);
+            r.run();
+            return null;
+        }).when(salutWorkerExecutor).execute(any(Runnable.class));
 
         // Act
-        salutSchedulerService.comprovarRefrescInfo();
+        salutSchedulerService.scheduledSalutTasks();
 
-        // Assert
-        verify(salutClientHelper).entornAppFindByActivaTrue();
-        // Since the task doesn't exist in tasquesActives, it should be scheduled
-        verify(taskScheduler).schedule(any(Runnable.class), any(PeriodicTrigger.class));
+        // Assert: first was rejected so only second reaches helper
+        verify(salutInfoHelper, never()).getSalutInfo(eq(entornApp));
+        verify(salutInfoHelper).getSalutInfo(eq(entornApp2));
     }
-
-    @Test
-    void testComprovarRefrescInfo_TaskAlreadyExists() {
-        // Arrange
-        List<EntornApp> entornApps = Arrays.asList(entornApp);
-        when(salutClientHelper.entornAppFindByActivaTrue()).thenReturn(entornApps);
-
-        // Add the task to tasquesActives
-        Map<Long, ScheduledFuture<?>> tasquesActives = (Map<Long, ScheduledFuture<?>>) ReflectionTestUtils.getField(salutSchedulerService, "tasquesActives");
-        tasquesActives.put(1L, scheduledFuture);
-
-        // Act
-        salutSchedulerService.comprovarRefrescInfo();
-
-        // Assert
-        verify(salutClientHelper).entornAppFindByActivaTrue();
-        // Since the task already exists in tasquesActives and interval has not changed, it should not be scheduled again
-        verify(taskScheduler, never()).schedule(any(Runnable.class), any(PeriodicTrigger.class));
-    }
-
 }
